# rdflib-scratchpad

./: .codespellrc  .cruft.json  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MAINTAINING.md  Makefile  README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml  requirements-poetry.in  requirements-poetry.txt  tasks.py  tox.ini
devtools/: Dockerfile  Makefile  README.md  go.mod  go.sum  requirements.in  requirements.txt  tools.go
src/aucampia/: __init__.py
src/aucampia/rdflib/: __init__.py
src/aucampia/rdflib/scratchpad/: unescape.py  unquote.py  unquote_fixed.py  unquote_new.py
tests/: test_literal.py  test_oxobridge.py  test_replace_performance.py  test_something.py  test_translate_performance.py  test_unescape.py  test_unescape_performance.py
