# https://python-poetry.org/docs/pyproject/
# https://www.python.org/dev/peps/pep-0621/
[tool.poetry]
name = "aucampia.template.poetry"
version = "0.0.0"
description = ""
authors = []
# license = "Proprietary"
license = "CC0-1.0"
readme = "README.md"
packages = [
    {include = "*", from = "src"},
]

[tool.poetry.scripts]
"aucampia.template.poetry" = "aucampia.template.poetry.cli:main"
"aucampia.template.poetry.click" = "aucampia.template.poetry.cli_click:main"
"aucampia.template.poetry.typer" = "aucampia.template.poetry.cli_typer:main"
"aucampia.template.poetry.service" = "aucampia.template.poetry.service:main"

[tool.poetry.dependencies]
python = "^3.7.0"
click = "^8.0.3"
pydantic = "^1.9.0"
typer = "^0.4.0"
rdflib = { git = "https://github.com/RDFLib/rdflib.git", branch = "master" }
rfc3986 = "^2.0.0"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
codespell = "^2.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.11.29"
flake8-isort = "^4.1.1"
invoke = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-subtests = "^0.5.0"
safety = "^1.10.3"
tox = "^3.24.5"
types-click = "^7.1.8"
types-dataclasses = "^0.6.4"
typing-extensions = "^4.0.1"
pycln = "^1.1.0"
pytest-benchmark = "^3.4.1"
pytest-profiling = "^1.7.0"

[tool.coverage.report]
# https://coverage.readthedocs.io/en/coverage-5.0/config.html
show_missing = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
profile = "black"

[tool.pytest.ini_options]
addopts = ["--cov-config=pyproject.toml", "--cov=src"]
# https://docs.pytest.org/en/stable/customize.html
# https://docs.pytest.org/en/stable/reference.html#configuration-options
# log_cli = true
# log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(process)d %(thread)d %(levelno)03d:%(levelname)-8s %(name)-12s %(module)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
# style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base=base, stage=stage, revision=revision) }}
    {%- else -%}
        {{ serialize_pep440(base=bump_version(base), stage=stage, revision=revision, dev=distance, metadata=[commit, "dirty"] if dirty else None ) | replace(".dev", "a") }}
    {%- endif -%}
"""
[tool.poetry-dynamic-versioning.substitution]
files=["src/**/_version.py"]

[build-system]
requires = ["setuptools","poetry-core>=1.0.0","poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "example"
#url = "https://example.com"
#default = false
